--- a/style.css
+++ b/style.css
@@ -19,8 +19,18 @@ body{
    opacity:1;
 }
 
+#int{
+    padding-top: 5px;
+    padding-left: 10px;
+}
+#fd{
+    padding-left: 15px;
+}
 p{
-text-align:left;
+ text-align:left;
+ padding-left: 10px;
+ padding-top: 5px;
+ padding-bottom: 5px;
 }
 
 #rem1{
