--- a/style.css
+++ b/style.css
@@ -103,7 +103,10 @@ p{
   
 
 #bod1{
-    padding: 10px;
+    
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
    
 }
 
