--- a/style.css
+++ b/style.css
@@ -77,6 +77,21 @@ h3{
     text-align: center;
 }
 
+#p1{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#p2{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#p3{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 
 
 h2,h1{
