--- a/style.css
+++ b/style.css
@@ -88,6 +88,36 @@ h3{
     padding: 5px;
 }
 
+#ma1{
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+#ma2{
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+#ma3{
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+#ma4{
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
+#ma5{
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
 .sld{
  border: 1px solid white;
  border-radius: 10px;
