--- a/style.css
+++ b/style.css
@@ -118,6 +118,39 @@ h3{
 
 }
 
+#tb{
+    max-height: 40vh;
+  overflow: auto;
+}
+
+table{
+    margin: auto;
+    border: 1px solid white;
+    
+    width: 90%;
+   
+    overflow-y: auto;
+    overflow-x: auto;
+   padding: 2px;
+   text-align: center;
+   
+}
+
+a{
+    color: blue;
+}
+table  th {
+    border: 1px solid white;
+    padding: 10px;
+    
+}
+
+table  tr td {
+    border: 1px solid white;
+    padding: 10px;
+    
+}
+
 .sld{
  border: 1px solid white;
  border-radius: 10px;
