--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ h3{
 }
 
 #p1{
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
@@ -157,6 +157,12 @@ table  tr td {
     
 }
 
+.qt{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
 .sld{
  border: 1px solid white;
  border-radius: 10px;
@@ -164,13 +170,13 @@ table  tr td {
  margin: auto;
 }
 #p2{
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #p3{
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
