--- a/style.css
+++ b/style.css
@@ -106,6 +106,12 @@ h3{
 
 }
 
+#ma6{
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
 #ma4{
     margin-top: 10px;
     margin-bottom: 10px;
