--- a/style.css
+++ b/style.css
@@ -82,6 +82,24 @@ h3{
     margin-bottom: 10px;
 }
 
+#p11{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
+#p12{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
+#p13{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
 
 .sl{
     text-align: center;
@@ -194,12 +212,27 @@ table  tr td {
  max-width: 95%;
  margin: auto;
 }
+
+#ai{
+    border: 1px solid white;
+    text-align: center;
+ border-radius: 10px;
+ max-width: 90%;
+ padding: 5px;
+ margin: auto;
+
+}
 #p2{
     margin-top: 10px;
     margin-bottom: 10px;
 }
 
 #p3{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+#p4{
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -212,9 +245,6 @@ h2,h1{
     padding: 10px;    
     
 }
-
-
-
 
 
 #header{
