--- a/style.css
+++ b/style.css
@@ -100,6 +100,24 @@ h3{
     margin-left: 20px;
 }
 
+#p21{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
+#p22{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
+#p23{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+}
+
 
 .sl{
     text-align: center;
